# myodds

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  setup.sh
assets/: config-template.json
myodds/: __main__.py  main.py  myoddsbot.py  utils.py
myodds/analyzer/: __init__.py  analyzer.py
myodds/constants/: __init__.py  bot.py  site.py
myodds/rpc/: __init__.py  telegram.py
myodds/scraper/: __init__.py  scraper.py
