[metadata]
name =  myodds
version = attr: myodds.__version__
license = GPLv3
license_files = LICENSE
author = erdieee
home_page = https://github.com/erdieee/myodds
description = MyOdds - Sure Bet Finder
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    myodds = myodds.main:main